# AVT9152_DEMO

./: LICENSE  README.md
applications/demo_IoTConnect/: CMakeLists.txt  Kconfig  child_mcuboot.conf  child_secure_partition_manager.conf  nrf9160_avt9152ns.overlay  prj.conf
applications/demo_IoTConnect/IoTConnect/: IoTConnect.h
applications/demo_IoTConnect/src/: IoTConnect_Config.h  env_sensors.c  env_sensors.h  env_sensors_regs.h  gps.c  gps.h  i3g4250d_def.h  lis2dh12_def.h  main.c  orientation_tap_detector.c  orientation_tap_detector.h  pir_detector.c  pir_detector.h  rotation_detector.c  rotation_detector.h  slm_at_gps.c  slm_at_host.c  slm_at_host.h  slm_util.h  supl_support.c  supl_support.h  te23142771_def.h
applications/hci_uart/: CMakeLists.txt  mcuboot_nrf52840_avt9152.conf
applications/hci_uart/boards/: nrf52840_avt9152.conf  nrf52840_avt9152.overlay
boards/arm/nrf52840_avt9152/: Kconfig  Kconfig.board  Kconfig.defconfig  board.c  nrf52840_avt9152.dts  nrf52840_avt9152.yaml  nrf52840_avt9152_defconfig
boards/arm/nrf9160_avt9152/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  nrf52840_reset.c  nrf9160_avt9152.dts  nrf9160_avt9152.yaml  nrf9160_avt9152_common.dts  nrf9160_avt9152_defconfig  nrf9160_avt9152_partition_conf.dts  nrf9160_avt9152ns.dts  nrf9160_avt9152ns.yaml  nrf9160_avt9152ns_defconfig
docs/: release_notes.txt
precompiled_image/: demo_IoTConnect_merged.hex  hci_uart_merged.hex
